<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@id/video_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/imageviewconscrip"
        android:background="@drawable/default_thumbnail"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/video_cover_title"
            android:textSize="15sp" />

        <TextView
            android:id="@id/video_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_cover_mark"
            android:layout_gravity="right"/>
    </LinearLayout>

</RelativeLayout>